--- a/index_main.css
+++ b/index_main.css
@@ -32,6 +32,7 @@ nav {
     color: #282A35;
     font-family: 'Source Sans Pro', sans-serif;
    height: 80px;
+   box-shadow: 0px 2px #f7cda6;
 }
 
 
