--- a/c1.css
+++ b/c1.css
@@ -15,6 +15,7 @@
     src: url('./fonts/slick.eot');
     src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
 }
+
 /* Arrows */
 .slick-prev,
 .slick-next
@@ -79,7 +80,8 @@
 
 .slick-prev
 {
-    left: -55px;
+    left: 0px;
+    z-index: 10;
 }
 [dir='rtl'] .slick-prev
 {
@@ -90,17 +92,21 @@
 {
 
     font-size: 50px;
-    content: '⇦';
+    content: '<';
+    color:white;
+    -webkit-text-stroke: 1px black;
+    border-color: black;
 }
 [dir='rtl'] .slick-prev:before
 {
     font-size: 50px;
-    content: '⇦';
+    content: '<';
 }
 
 .slick-next
 {
-    right: -25px;
+    right: 8px;
+    z-index: 10;
 }
 [dir='rtl'] .slick-next
 {
@@ -110,12 +116,18 @@
 .slick-next:before
 {
     font-size: 50px;
-    content: '⇨';
+    content: '>';
+    color:white;
+    -webkit-text-stroke: 1px black;
+    border-color: black;
 }
 [dir='rtl'] .slick-next:before
 {
     font-size: 50px;
-    content: '⇨';
+    content: '>';
+    color:white;
+    -webkit-text-stroke: 2px black;
+    border-color: black;
 }
 
 /* Dots */
