--- a/index_main.css
+++ b/index_main.css
@@ -1,20 +1,23 @@
 body {
     margin: 0;
-    font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #eeeeee;
+}
+
+
+.s1right,h3,h4{
+font-size: 28px;
 }
 
 #section1{
     display:flex;
    
-    
 }
 
-nav,#section1{
+/* nav,#section1{
     padding-left: 100px;
     padding-right: 100px;
-}
+} */
 
 #s1right{
     position: relative;
@@ -24,6 +27,10 @@ nav,#section1{
     background-color: #012435;
 }
 
+
+
+
+
 nav {
     overflow: hidden;
     background-color: white;
@@ -32,15 +39,17 @@ nav {
     color: #282A35;
     font-family: 'Source Sans Pro', sans-serif;
    height: 80px;
+   width: 100%;
    box-shadow: 0px 2px #f7cda6;
+
 }
 
 
-#nav_content,#section1,#section2{
+#nav_content,#section1,#section2,#section3,#section4{
   position: relative;
-  margin-right: auto; 
-  margin-left:  auto; 
   max-width: 1200px; 
+ margin-left: auto;
+ margin-right: auto;
 }
 
 #nav_content,#section1{
@@ -51,6 +60,8 @@ nav {
 #section2{
   padding-top: 20px;
 }
+
+
 
 
 #navLeft img{
@@ -93,13 +104,17 @@ nav a.active {
   .vl {
 border-left: 2px Solid rgb(231, 230, 230);
     height: 80px;
-   
   }
 
 #s1right h4,h3,img{
     color:white;
     line-height: 5px;
     padding-left: 18px;
+}
+
+
+#s1right img{
+  padding-left: 18px;
 }
 
 
