--- a/blogList.css
+++ b/blogList.css
@@ -12,6 +12,7 @@
         padding: 20px;
         display: block;
         width: 25rem;
+        height:515px;
     }
     
     .widget-blog-cover {
