--- a/index_main.css
+++ b/index_main.css
@@ -14,6 +14,13 @@ font-size: 28px;
    
 }
 
+#manual1 img {
+  position: relative;
+width: 90%;
+height: 90%;
+padding-right: 500px;
+
+}
 /* nav,#section1{
     padding-left: 100px;
     padding-right: 100px;
